crates/wac-parser/tests/resolution/fail/mismatched-func-params.wac
package test:comp;

import x: interface {
    f: func();
};

let i = new foo:bar { x };
